[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sciscraper"
version = "1.2.0"
description = "A bulk academic PDF extractor program, designed specifically for papers about behavioral science and design."
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10"
]
authors = ["John Fallot <john.fallot@gmail.com>"]
readme = "README.md"
packages = [{include = "sciscrape", from = "src"}]
repository = "https://github.com/Pathos315/sciscraper"


[tool.poetry.dependencies]
python = "^3.10"
google = "^3.0.0"
pandas = "^2.0.3"
pdfplumber = "^0.10.1"
requests = "^2.31.0"
tqdm = "^4.65.0"
numpy = "^1.25.1"
feedparser = "^6.0.10"
selectolax = "^0.3.14"
python-dotenv = "^1.0.0"
pydantic = "^2.0.3"
pytest = "^8.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
flake8 = "^6.0.0"
tox = "^4.6.4"
python-semantic-release = "^7.34.6"
snakeviz = "^2.2.0"
psutil = "^5.9.5"
memory-profiler = "^0.61.0"

[tool.poetry.group.tests.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
requests-mock = "^1.11.0"
hypothesis = "^6.82.0"

[tool.poetry.group.formatting.dependencies]
black = "^23.7.0"

[tool.poetry.scripts]
sciscraper_cli = "sciscrape.main:main"

[tool.pytest.ini_options]
addopts = "--cov=src  --runxfail --cov-report term-missing -v"
testpaths = ["tests"]

[tool.black]
line-length = 120  # Default
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | _build
)/
'''

[tool.flake8]
max-line-length = 120
max-complexity = 5
select = [
  "B",
  "C",
  "E",
  "F",
  "W"
  ]

exclude = [
  ".git",
  "__pycache__",
  ".env",
]

[tool.mypy]
mypy_path = "src"
enable_error_code = [
    "truthy-bool",
    "truthy-function",
    "redundant-expr"
]
disable_error_code = [
    "import",
    "no-untyped-def",
    "override",
    "assignment",
    "func-returns-value",
]
show_traceback = true
show_error_context = true
show_column_numbers = true
strict_equality = true
warn_redundant_casts = true
disallow_untyped_calls = true
warn_unreachable = true

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
build_command = """
  python -m pip install build~=0.10.0
  python -m build .
"""

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.tox]
legacy_tox_ini = """
  envlist =  {darwin, win32, linux}-{py310}, flake8, mypy
  minversion = 4
  isolated_build = true

  [gh-actions]
  python =
      3.10: py310, mypy, flake8

  [testenv]
  usedevelop = True
  basepython = python3.10
  description = install pytest in a virtual environment and invoke it on the tests folder
  setenv =
      PYTHONPATH = {toxinidir}
  deps =
      -r{toxinidir}/requirements.txt
      -r{toxinidir}/requirements_dev.txt
  commands =
      pytest --basetemp={envtmpdir}

  [testenv:darwin]
  platform = darwin

  [testenv:win32]
  platform = win32

  [testenv:linux]
  platform = linux|linux2

  [testenv:flake8]
  commands = flake8 src

  [testenv:mypy]
  commands = mypy --explicit-package-bases src
"""
