[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sciscraper"
version = "1.2.0"
description = "A bulk academic PDF extractor program, designed specifically for papers about behavioral science and design."
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8"
]
authors = ["John Fallot <john.fallot@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Pathos315/sciscraper"


[tool.poetry.dependencies]
python = "^3.8"
google = "^3.0.0"
pandas = "^2.0.3"
pdfplumber = "^0.10.1"
requests = "^2.31.0"
tqdm = "^4.65.0"
numpy = "^1.25.1"
feedparser = "^6.0.10"
selectolax = "^0.3.14"
python-dotenv = "^1.0.0"
pydantic = "^2.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
mypy = "^1.8.0"
flake8 = "^7.0.0"
tox = "^4.12.1"
python-semantic-release = "^7.34.6"
snakeviz = "^2.2.0"
psutil = "^5.9.5"
memory-profiler = "^0.61.0"

[tool.poetry.group.tests.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
requests-mock = "^1.11.0"
hypothesis = "^6.82.0"

[tool.poetry.group.formatting.dependencies]
black = "^23.7.0"

[tool.poetry.scripts]
sciscraper_cli = "sciscrape.main:main"

[tool.pytest.ini_options]
addopts = "--cov=src  --runxfail --cov-report term-missing -v"
testpaths = ["tests"]

[tool.black]
line-length = 120  # Default
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | _build
)/
'''

[tool.flake8]
max-line-length = 120
max-complexity = 5
select = [
  "B",
  "C",
  "E",
  "F",
  "W"
  ]

exclude = [
  ".git",
  "__pycache__",
  ".env",
]

[tool.mypy]
files = "sciscrape, tests"
mypy_path = "sciscrape"
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
strict = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]