[metadata]
name = sciscraper
description = A bulk academic PDF extractor program, designed specifically for papers about behavioral science and design.
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, darwin, win32
classifiers =
    Programming Language :: Python :: 3.10

[options]
packages =
    sciscrape
install_requires =
    setuptools>=42.0
    wheel>=0.38
    requests>=2
    certifi>=2022.9.24
    cffi>=1.15.1
    charset-normalizer>=2.1.1
    cryptography>=38.0.4
    Cython>=0.29.32
    idna>=3.4
    numpy>=1.23.5
    pandas>=1.5.2
    pdfminer.six>=20221105
    pdfplumber>=0.7.6
    python-dotenv>=0.21.0
    Pillow>=9.3.0
    pycparser>=2.21
    python-dateutil>=2.8.2
    pytz>=2022.6
    requests>=2.28.1
    selectolax>=0.3.11
    six>=1.16.0
    snakeviz>=2.1.1
    tornado>=6.2
    tqdm>=4.64.1
    urllib3>=1.26.13
    Wand>=0.6.10
python_requires =
    >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7
    pytest-cov>=4
    pytest-mock>=3.10.0
    mypy>=0.990
    flake8>=6.0.0
    tox>=4.0
    responses>=0.22.0

[options.package_data]
sciscrape = py.typed

[flake8]
max-line-length = 120
max-complexity = 5
select = B,C,E,F,W
exclude =
    .git,
    __pycache__,
    .env,
