[metadata]
name = sciscraper
description = A bulk academic PDF extractor program, designed specifically for papers about behavioral science and design.
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, darwin, win32
classifiers =
    Programming Language :: Python :: 3.10

[options]
packages =
    sciscrape
install_requires =
    setuptools>=42.0
    wheel>=0.38
    google>=3.0.0
    memory_profiler>=0.61.0
    pandas>=1.5.2
    pdfplumber>=0.7.6
    requests>=2.28.1
    feedparser>=6.0.10
    selectolax>=0.3.11
    snakeviz>=2.1.1
    tqdm>=4.64.1
python_requires =
    >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=7
    pytest-cov>=4
    pytest-mock>=3.10.0
    mypy>=0.990
    flake8>=6.0.0
    tox>=4.0
    requests-mock>=1.9.3

[options.package_data]
sciscrape = py.typed

[flake8]
max-line-length = 120
max-complexity = 5
select = B,C,E,F,W
exclude =
    .git,
    __pycache__,
    .env,
